--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,5 @@
 {
-    "token": "token_here",
+    "token": 5155274943:AAE2ypZPIko5kR9IF7_Yqq74IuMsDF8BI3M,
     "admin_list": [0],
     "open_lobby": true,
     "enable_translations": false,
